create buying system and getting plant
